--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,8 +3,16 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-<div class="d-grid gap-2">
-    <a href="{{path('app_register')}}"><button class="btn btn-primary" type="button">Inscription</button></a>
-    <a href="{{path('app_login')}}"><button class="btn btn-primary" type="button">Connexion</button></a>
-</div>
+    <div class="d-grid gap-2" >
+        <a href="{{path('app_register')}}"><button class="btn btn-primary" type="button">Inscription</button></a>
+        <a href="{{path('app_login')}}"><button class="btn btn-primary" type="button">Connexion</button></a>
+    </div>
+    <div class="card" style="width: 18rem;">
+    <img src="..." class="card-img-top" alt="...">
+    <div class="card-body">
+    <h1>Decrouvez des Travailleurs de differents secteurs inscites dans notre plateforme</h1>
+        <p class="card-text"> 
+        </p>
+    </div>
+    </div>
 {% endblock %}
