--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,18 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Hare mate{% endblock %}
 
 {% block body %}
     <div class="d-grid gap-2" >
         <a href="{{path('app_register')}}"><button class="btn btn-primary" type="button">Inscription</button></a>
         <a href="{{path('app_login')}}"><button class="btn btn-primary" type="button">Connexion</button></a>
-    </div>
-    <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-    <h1>Decrouvez des Travailleurs de differents secteurs inscites dans notre plateforme</h1>
-        <p class="card-text"> 
-        </p>
-    </div>
+    </div> 
+    <br>
+    <div class="container">
+        <div class="row flex">
+            {% for secteur in secteurs %}
+                <div class="col-3">
+                    <div class="card" style="width: 18rem;">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                            {{secteur.nom}}
+                            </h5>
+                            <p class="card-text"> </p>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
