--- a/templates/demande/show.html.twig
+++ b/templates/demande/show.html.twig
@@ -4,31 +4,53 @@
 
 {% block body %}
     <h1>Demande</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ demande.id }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ demande.description }}</td>
-            </tr>
-            <tr>
-                <th>Tarif</th>
-                <td>{{ demande.tarif }}</td>
-            </tr>
-            <tr>
-                <th>Date</th>
-                <td>{{ demande.date ? demande.date|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-md-8">
+                
+            </div>
+            <div class="col-md-4">
+                <table class="table">
+                    <tbody>
+                        <tr>
+                            <th>Id</th>
+                            <td>{{ demande.id }}</td>
+                        </tr>
+                        <tr>
+                            <th>Description</th>
+                            <td>{{ demande.description }}</td>
+                        </tr>
+                        <tr>
+                            <th>Tarif</th>
+                            <td>{{ demande.tarif }}</td>
+                        </tr>
+                        <tr>
+                            <th>Date</th>
+                            <td>{{ demande.date ? demande.date|date('Y-m-d H:i:s') : '' }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a href="{{ path('demande_edit', {'id': demande.id}) }}" class="btn btn-primary">Editer la demande</a>
+            </div>
+        </div>
+        <nav>
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">
+                {{utilisateur.nom}}
+                {{utilisateur.prenom}}
+                {{utilisateur.adresse}}
+                {{utilisateur.profil}}
+                </h5>
+                <p class="card-text"> </p>
+            </div>
+        </nav>
+        
+        
+    </div>
     <a href="{{ path('demande_index') }}">Retouner</a>
 
-    <a href="{{ path('demande_edit', {'id': demande.id}) }}">Editer</a>
+    
 
     {{ include('demande/_delete_form.html.twig') }}
 {% endblock %}
