--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,19 +4,21 @@
 
 {% block body %}
     <h1>Inscription</h1>
-    <div class="registrationForm"> 
-        {{ form_start(registrationForm) }}
-            {{ form_row(registrationForm.nom) }}
-            {{ form_row(registrationForm.prenom) }}
-            {{ form_row(registrationForm.adresse) }}
-            {{ form_row(registrationForm.telephone) }}
-            {{ form_row(registrationForm.email) }}
-            {{ form_row(registrationForm.plainPassword, {
-                label: 'Password'
-            }) }}
-            {{ form_row(registrationForm.agreeTerms) }}
+   <div class="block"> 
+        <div class="registrationForm"> 
+            {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.nom) }}
+                {{ form_row(registrationForm.prenom) }}
+                {{ form_row(registrationForm.adresse) }}
+                {{ form_row(registrationForm.telephone) }}
+                {{ form_row(registrationForm.email) }}
+                {{ form_row(registrationForm.plainPassword, {
+                    label: 'Password'
+                }) }}
+                {{ form_row(registrationForm.agreeTerms) }}
 
-            <button type="submit" class="btn">Register</button>
-        {{ form_end(registrationForm) }}
+                <button type="submit" class="btn">S'inscrire</button>
+            {{ form_end(registrationForm) }}
+        </div>
     </div>
 {% endblock %}
