--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,11 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
+ <section id="contact" class="php-contact-form">
+    <div class="container">
+        <div class="section-title">
+        <h2> Connexion </h2>
+    </div>
     <div class="form">
         <form method="post">
             {% if error %}
@@ -41,4 +46,8 @@
             </button>
         </form>
     </div>
+</section>
 {% endblock %}
+
+          
+
