--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Inscription{% endblock %}
 
 {% block body %}
     <section id="contact" class="contact">
@@ -10,9 +10,10 @@
           <h2>Inscription</h2>
           <p>Veuillez remplir les champs suivants</p>
         </div>
-              <div class="block"> 
-            <div class="registrationForm"> 
-                {{ form_start(registrationForm) }}
+            <div class="container">  
+            
+            <form class="form">
+                    {{ form_start(registrationForm) }}
                     {{ form_row(registrationForm.nom) }}
                     {{ form_row(registrationForm.prenom) }}
                     {{ form_row(registrationForm.adresse) }}
@@ -22,10 +23,10 @@
                         label: 'Password'
                     }) }}
                     {{ form_row(registrationForm.agreeTerms) }}
-
                     <div class="text-center"><button type="submit">Enregister</button></div>
                 {{ form_end(registrationForm) }}
-            </div>
+            </form>
+            
         </div>
 
     </section>
