La serialisation sur api plateform

--- a/templates/base/_nav.html.twig
+++ b/templates/base/_nav.html.twig
@@ -2,7 +2,7 @@
   <header id="header" class="fixed-top header-transparent">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="#">Hare mate</a></h1>
+      <h1 class="logo"><a href="{{path('home')}}">Hare mate</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -11,6 +11,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="{{path('home')}}">Acceuil</a></li>
           <li><a class="nav-link scrollto" href="{{path('secteur_index')}}">Secteur</a></li>
+          <li><a class="nav-link scrollto" href="{{path('demande_index')}}">Demande</a></li>
+            <li><a class="nav-link scrollto" href="{{path('competences_index')}}">Competence</a></li>
           <li class="dropdown"><a href="#"><span>Profil</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="{{path('competences_index')}}">Competences</a></li>
