--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,31 +3,25 @@
 {% block title %}Inscription{% endblock %}
 
 {% block body %}
-    <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Inscription</h2>
-          <p>Veuillez remplir les champs suivants</p>
-        </div>
-            <div class="container">  
-            
-            <form class="form">
+          
+              <h2 class="text-uppercase text-center mb-5">Inscription</h2>
+                <p>Veuillez remplir les champs suivants</p>
                     {{ form_start(registrationForm) }}
-                    {{ form_row(registrationForm.nom) }}
-                    {{ form_row(registrationForm.prenom) }}
-                    {{ form_row(registrationForm.adresse) }}
-                    {{ form_row(registrationForm.telephone) }}
-                    {{ form_row(registrationForm.email) }}
+                    
+                    {{ form_row(registrationForm.nom , {label: 'nom'}) }}
+                     
+                    {{ form_row(registrationForm.prenom  , {label: 'prenom'}) }}
+                     
+                    {{ form_row(registrationForm.adresse  , {label: 'adresse'}) }}
+                   
+                    {{ form_row(registrationForm.telephone  , {label: 'telephone'}) }}
+                     
+                    {{ form_row(registrationForm.email  , {label: 'Email'}) }}
                     {{ form_row(registrationForm.plainPassword, {
                         label: 'Password'
                     }) }}
                     {{ form_row(registrationForm.agreeTerms) }}
-                    <div class="text-center"><button type="submit">Enregister</button></div>
+                     <button type="submit">Enregister</button>
                 {{ form_end(registrationForm) }}
-            </form>
             
-        </div>
-
-    </section>
 {% endblock %}
