correction sur les templates

--- a/templates/base/_nav.html.twig
+++ b/templates/base/_nav.html.twig
@@ -1,44 +1,62 @@
- <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top header-transparent">
-    <div class="container d-flex align-items-center justify-content-between">
+<!-- ======= Header ======= -->
+<header id="header" class="fixed-top header-transparent">
+	<div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="{{path('home')}}">Hare mate</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+		<h1 class="logo">
+			<a href="{{path('home')}}">Hare mate</a>
+		</h1>
+		<!-- Uncomment below if you prefer to use an image logo -->
+		<!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav id="navbar" class="navbar">
-      {% if app.user %}
-        <ul>
-          <li><a class="nav-link scrollto active" href="{{path('home')}}">Acceuil</a></li>
-          <li><a class="nav-link scrollto" href="{{path('secteur_index')}}">Secteur</a></li>
-          <li><a class="nav-link scrollto" href="{{path('demande_index')}}">Demande</a></li>
-            <li><a class="nav-link scrollto" href="{{path('competences_index')}}">Competence</a></li>
-          <li class="dropdown"><a href="#"><span>Profil</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="{{path('competences_index')}}">Competences</a></li>
-              <li><a href="#">Informations</a></li>
-            </ul>
-      {% endif %}
-          </li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+		<nav id="navbar" class="navbar">
+			{% if app.user %}
+				<ul>
+					<li>
+						<a class="nav-link scrollto active" href="{{path('home')}}">Acceuil</a>
+					</li>
+					<li>
+						<a class="nav-link scrollto" href="#">Secteur</a>
+					</li>
+					<li class="dropdown">
+						<a href="#">
+							<span>Profil</span>
+							<i class="bi bi-chevron-down"></i>
+						</a>
+						<ul>
+							<li><a href="#">Informations</a></li>
+						</ul>
+					{% endif %}
+				</li>
+			</ul>
+			<i class="bi bi-list mobile-nav-toggle"></i>
+		</nav>
+		<!-- .navbar -->
 
-    </div>
-  </header><!-- End Header -->
+	</div>
+</header>
+<!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center justify-content-center">
-    <div class="container position-relative">
-      <h1>Bienvenue sur Hare Mate</h1>
-      <h2>La plateforme qui vous permet de trouver des freelancer et d'etre des freelancer</h2>
-      {% if app.user %}
-      <a href="{{path('app_logout')}}" class="btn-get-started scrollto">Deconnexion</a>
-      {% else %}  
-      <a href="{{path('app_register')}}" class="btn-get-started scrollto">Inscription</a>
-      <a href="{{path('app_login')}}" class="btn-get-started scrollto">Connexion</a>
-      {% endif %}
-    </div>
-  </section><!-- End Hero -->
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center justify-content-center">
+	<div class="container position-relative">
+		<h1>Bienvenue sur Hare Mate</h1>
+		<h2>La plateforme qui vous permet de trouver des freelancer et d'etre des freelancer</h2>
+		{% if app.user %}
+			<a href="{{path('app_logout')}}" class="btn-get-started scrollto">Deconnexion</a>
+		{% else %}
+			<a href="{{path('app_register')}}" class="btn-get-started scrollto">Inscription</a>
+			<a href="{{path('app_login')}}" class="btn-get-started scrollto">Connexion</a>
+		{% endif %}
+	</div>
+</section>
+<!-- End Hero -->
+<section id="clients" class="clients section-bg">
+      <div class="container">
 
-  <main id="main">
+        <div class="row">
+
+
+        </div>
+
+      </div>
+    </section>
