--- a/templates/demande/index.html.twig
+++ b/templates/demande/index.html.twig
@@ -15,7 +15,8 @@
                 </tr>
             </thead>
             <tbody>
-            {% for demande in demandes %}
+            
+            {% for demande in app.user.demandes %}
                 <tr>
                     <td>{{ demande.id }}</td>
                     <td>{{ demande.description }}</td>
