--- a/templates/base/_footer.html.twig
+++ b/templates/base/_footer.html.twig
@@ -1,4 +1,5 @@
  <!-- ======= Footer ======= -->
+ 
   <footer id="footer">
 
     <div class="footer-top">
@@ -40,4 +41,5 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer>
+  <!-- End Footer -->
