--- a/templates/demande/_delete_form.html.twig
+++ b/templates/demande/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('demande_delete', {'id': demande.id}) }}" onsubmit="return confirm('Etes vous sur de vouoir supprimer cette demande?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ demande.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn btn-primary">Supprimer</button>
 </form>
