--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,27 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Inscription{% endblock %}
+{% block title %}Inscription
+{% endblock %}
 
 {% block body %}
-          
-              <h2 class="text-uppercase text-center mb-5">Inscription</h2>
-                <p>Veuillez remplir les champs suivants</p>
-                    {{ form_start(registrationForm) }}
-                    
-                    {{ form_row(registrationForm.nom , {label: 'nom'}) }}
-                     
-                    {{ form_row(registrationForm.prenom  , {label: 'prenom'}) }}
-                     
-                    {{ form_row(registrationForm.adresse  , {label: 'adresse'}) }}
-                   
-                    {{ form_row(registrationForm.telephone  , {label: 'telephone'}) }}
-                     
-                    {{ form_row(registrationForm.email  , {label: 'Email'}) }}
-                    {{ form_row(registrationForm.plainPassword, {
-                        label: 'Password'
-                    }) }}
-                    {{ form_row(registrationForm.agreeTerms) }}
-                     <button type="submit">Enregister</button>
-                {{ form_end(registrationForm) }}
-            
+
+	<section id="contact" class="contact">
+		<div class="container">
+
+			<div class="section-title">
+				<h2 class="text-uppercase text-center mb-5">Inscription</h2>
+				<p>Veuillez remplir les champs suivants</p>
+			</div>
+
+			<div class="row">
+
+				<div class="container">
+						<div class="contact">
+							<div class="col-md-4 form-group">
+								{{ form_start(registrationForm) }}
+								{{ form_row(registrationForm.nom , {label: 'nom'}) }}
+								{{ form_row(registrationForm.prenom  , {label: 'prenom'}) }}
+								{{ form_row(registrationForm.adresse  , {label: 'adresse'}) }}
+								{{ form_row(registrationForm.telephone  , {label: 'telephone'}) }}
+								{{ form_row(registrationForm.email  , {label: 'Email'}) }}
+								{{ form_row(registrationForm.plainPassword, { label: 'Password' }) }}
+								{{ form_row(registrationForm.agreeTerms) }}
+								<div class="text-center">
+									<button type="submit" clas="btn btn-primary">Enregister</button>
+								</div>
+								{{ form_end(registrationForm) }}
+							</div>
+				</div>
+
+			</div>
+
+		</div>
+	</section>
 {% endblock %}
