--- a/templates/home/editprofil.html.twig
+++ b/templates/home/editprofil.html.twig
@@ -1,15 +1,19 @@
 {% extends "base.html.twig" %}
 {% block body %}
-<section id="pricing" class="pricing">
-<div class="row">
-	{% for utilisateur in user %}
-		<div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-			<div class="box featured">
-				
-				
+	<section id="pricing" class="pricing">
+		<div class="row">
+			<div class="col-lg-3 col-md-6 mt-4 mt-md-0">
+				<div class="box featured center">
+					{{ form_start(form) }}
+					{{ form_row(form.nom) }}
+					{{ form_row(form.prenom) }}
+					{{ form_row(form.adresse) }}
+					{{ form_row(form.telephone) }}
+					{{ form_row(form.password) }}
+					<button type="submit" class="btn btn-primary">Enregistre</button>
+					{{ form_end(form) }}
+				</div>
 			</div>
 		</div>
-    {% endfor %}
-</div>
-</section>	
+	</section>
 {% endblock %}
