--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,5 +26,23 @@
 
 	</div>
 </section>
-{% endif %}
-{% endblock %}
+<section id="pricing" class="pricing">
+	<div class="container">
+
+		<div class="section-title">
+			<h2>Secteur</h2>
+			<p>Decouvrez nos differents secteurs d'activites</p>
+		</div>
+
+		<div class="row">
+			{% for secteur in secteurs %}
+				<div class="col-lg-3 col-md-6 mt-4 ">
+					<div class="box featured">
+						<h3>{{secteur.nom}}</h3>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+
+	</div>
+</section>{% endif %}{% endblock %}
