--- a/templates/home/free.html.twig
+++ b/templates/home/free.html.twig
@@ -1,24 +1,57 @@
 {% extends "base.html.twig" %}
+{% block title %}Profil de
+	{{app.user.nom}}
+{% endblock %}
 {% block body %}
-<section id="pricing" class="pricing">
-<div class="row">
-	{% for utilisateur in user %}
-		<div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-			<div class="box featured">
-				<h3></h3>
-				<h4>{{utilisateur.prenom}}
-					{{utilisateur.nom}}</h4>
-				<ul>
-					<li>{{utilisateur.adresse}}</li>
-					<li>{{utilisateur.telephone}}</li>
-                    <li>{{utilisateur.email}}</li>
-				</ul>
-				<div class="btn-wrap">
-					<a href="{{path('demande_new')}}" class="btn-buy">Contacter</a>
-				</div>
+	<div class="container mt-4">
+		<div class="row">
+			<div class="col-md-8">
+				<table class="table">
+					<tbody>
+						<tr>
+							<th>nom</th>
+							<td>{{ app.user.nom }}</td>
+						</tr>
+						<tr>
+							<th>prenom</th>
+							<td>{{ app.user.prenom }}</td>
+						</tr>
+						<tr>
+							<th>adresse</th>
+							<td>{{ app.user.adresse }}</td>
+						</tr>
+						<tr>
+							<th>Telephone</th>
+							<td>{{ app.user.telephone }}</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
-    {% endfor %}
-</div>
-</section>	
+		<div class="col-md-4">
+			{% for competences in app.user.profil %}
+				<table class="table">
+					<tbody>
+						<tr>
+							<th>specialite</th>
+							<td>{{ competences.specialite }}</td>
+						</tr>
+						<tr>
+							<th>niveau</th>
+							<td>{{ competences.niveau }}</td>
+						</tr>
+						<tr>
+							<th>description</th>
+							<td>{{ competences.description }}</td>
+						</tr>
+						<tr>
+							<th>secteur</th>
+							<td>{{ competences.secteur }}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		{% endfor %}
+	</div>
+
 {% endblock %}
