--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,9 +15,9 @@
 
 			<div class="row">
 
-				<div class="container">
-						<div class="contact">
-							<div class="col-md-4 form-group">
+				<section class="form">
+						<div class="container">
+							<div class="m-auto">
 								{{ form_start(registrationForm) }}
 								{{ form_row(registrationForm.nom , {label: 'nom'}) }}
 								{{ form_row(registrationForm.prenom  , {label: 'prenom'}) }}
