--- a/templates/base/_nav.html.twig
+++ b/templates/base/_nav.html.twig
@@ -23,7 +23,7 @@
 							<i class="bi bi-chevron-down"></i>
 						</a>
 						<ul>
-							<li><a href="#">mes demandes</a></li>
+							<li><a href="{{path('demande_index')}}">mes demandes</a></li>
 							<li><a href="#">Demandes postes</a></li>
 						</ul>
 					{% endif %}
